--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.revature</groupId>
-    <artifactId>let-sleeping-cats-lie</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>LetSleepingCatsLie</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -62,5 +62,10 @@
         </dependency>
 
     </dependencies>
+    <packaging>war</packaging>
+
+    <build>
+        <finalName>LetSleepingCatsLie</finalName>
+    </build>
     
 </project>
