--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 
     <dependencies>
 
+        <!-- Catnap -->
+        <dependency>
+            <groupId>com.revature</groupId>
+            <artifactId>catnap</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
